--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
-        h1, h2 {
+        h1{
+            color: black;
+        }
+        
+        h2 {
             color: #0a3d62;
         }
 
